# implant

./: .gitignore  Cargo.toml  README.md  codecov.yml  renovate.json  renovate.json5
.cargo/: config.toml
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  bug_report.md  config.yml  feature_request.md  question.md
.github/actions/sync-status-on-merge/: action.yml
.github/workflows/: auto-set-label.yml  ci.yml  implant-ci.yml  move-closed-issue-to-milestone.yml  openaev-auto-label.yml  openaev-check-signed-commit.yml  openaev-validate-pr-title.yml  release.yml  sync-status-on-merge.yml  validate-pr-title.yml
scripts/: release.py
src/: main.rs
src/api/: manage_inject.rs  manage_reporting.rs  mod.rs
src/common/: constants.rs  execution_result.rs  logger.rs  mod.rs
src/handle/: handle_command.rs  handle_dns_resolution.rs  handle_execution.rs  handle_file.rs  handle_file_drop.rs  handle_file_execute.rs  mod.rs
src/process/: command_exec.rs  file_exec.rs  mod.rs  parent_spoof.rs
src/tests/api/: client.rs  manage_inject.rs
src/tests/process/: command_exec_tests.rs  execution_result_tests.rs  mod.rs
