[package]
name = "openaev-implant"
version = "2.260704.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
tracing-appender = "0.2.4"
rolling-file = "0.2.0"
mailparse = "0.16.0"
percent-encoding = "2.3.2"
rustls-webpki = ">0.103.12"

[dependencies.reqwest]
version = "0.12.28"
features = [
    "blocking",
    "rustls-tls",
    "rustls-tls-native-roots",
    "json",
]
default-features = false

[dependencies.serde]
version = "1.0.203"
features = [
    "derive",
]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.log]
version = "0.4.21"
features = [
    "kv",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = [
    "json",
]

[dependencies.clap]
version = "4.5.7"
features = [
    "derive",
]

[dev-dependencies]
mockito = "1.7.0"
